Fix: footer contrast

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@ h1, h2, h3 {
 }
 
 // =========================
-// LINKS - LIGHT
+// LINKS 
 // =========================
 
 a {
@@ -39,3 +39,12 @@ a {
   }
 }
 
+
+// =========================
+// FOOTER
+// =========================
+
+.footer-col p,
+.footer-col li {
+    color: #5a5a5a;
+}
